# dioxus-todo-fullstack

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  docker-compose.yaml
migrations/: 20240919091939_todos_create_table.sql
src/: database.rs  main.rs
src/components/: todos.rs
src/models/: mod.rs  todos.rs
src/server_functions/: todos.rs
